# lab_3_FSA

./: CMakeLists.txt  README.md  machine.cpp  machine.h  main  main.cpp  qwe  ввод-вывод.rtf
